# ordinary

./: .gitignore  Cargo.toml  README.md  ordinary.toml  sailfish.toml
.extensions/accounting/: Cargo.toml
.extensions/analytics/: Cargo.toml
.extensions/banking/: Cargo.toml
.extensions/blog/: Cargo.toml
.extensions/books/: Cargo.toml
.extensions/calendar/: Cargo.toml
.extensions/crm/: Cargo.toml
.extensions/delivery/: Cargo.toml
.extensions/documents/: Cargo.toml
.extensions/email/: Cargo.toml
.extensions/fedi/: Cargo.toml
.extensions/feed/: Cargo.toml
.extensions/finance/: Cargo.toml
.extensions/forum/: Cargo.toml
.extensions/gallery/: Cargo.toml
.extensions/games/: Cargo.toml
.extensions/git/: Cargo.toml
.extensions/hr/: Cargo.toml
.extensions/images/: Cargo.toml
.extensions/iot/: Cargo.toml
.extensions/livestream/: Cargo.toml
.extensions/marketing/: Cargo.toml
.extensions/media/: Cargo.toml
.extensions/messager/: Cargo.toml
.extensions/moderation/: Cargo.toml
.extensions/movies/: Cargo.toml
.extensions/music/: Cargo.toml
.extensions/oauth/: Cargo.toml
.extensions/passwords/: Cargo.toml
.extensions/payments/: Cargo.toml
.extensions/payments/src/: lib.rs
.extensions/payroll/: Cargo.toml
.extensions/personel/: Cargo.toml
.extensions/pickup/: Cargo.toml
.extensions/podcast/: Cargo.toml
.extensions/presentations/: Cargo.toml
.extensions/projects/: Cargo.toml
.extensions/series/: Cargo.toml
.extensions/smm/: Cargo.toml
.extensions/spreadsheets/: Cargo.toml
.extensions/storefront/: Cargo.toml
.extensions/storefront/.structure/customer/: Cargo.toml
.extensions/storefront/.structure/customer/.structure/cart/: Cargo.toml
.extensions/supplychain/: Cargo.toml
.extensions/tabletop/: Cargo.toml
.extensions/vpn/: Cargo.toml
.extensions/workspace/: Cargo.toml
.structure/: [id.a].html  [id].json  _head.html.stpl  donate.html  index.html.stpl  index.json  index.json.stpl
.structure/post/: Cargo.toml
.structure/post/.structure/: index.md
.structure/product/: Cargo.toml
.structure/user/: Cargo.toml
.structure/user/.structure/cart/: Cargo.toml
.templates/posts/: Cargo.toml
.templates/posts/.templates/[:slug]/: Cargo.toml
.templates/products/: Cargo.toml
.templates/products/.templates/[:id]/: Cargo.toml
.templates/products/.templates/[:id]/.templates/: .md
ordinary/: Cargo.toml  README.md
ordinary/src/: lib.rs  main.rs
ordinary/src/app/: start.rs
ordinary/src/optimizer/: mod.rs
ordinary/src/storage/: graph.rs  mod.rs
ordinary/src/storage/ops/: mod.rs  storage_put.rs  storage_query.rs
parts/auth/: Cargo.toml
parts/auth/src/: login.rs  registration.rs  store.rs  token.rs
parts/cli/src/: main.rs
parts/core/: Cargo.toml
parts/core/src/: lib.rs
parts/core/src/ops/: access_get.rs  login_finish.rs  login_start.rs  mod.rs  registration_finish.rs  registration_start.rs  secret_put.rs  storage_put.rs  storage_query.rs
parts/core/tests/: integration.rs
parts/gui/: Cargo.toml
parts/kernel/: Cargo.toml
parts/kernel/orchestrator/: mod.rs
parts/server/: Cargo.toml
parts/server/src/: lib.rs
parts/server/src/handlers/: delete.rs  mod.rs  reqres.rs  stream.rs
parts/server/tests/: integration.rs
parts/storage/: Cargo.toml
parts/storage/src/: lib.rs
parts/storage/src/ops/: storage_put.rs  storage_query.rs
parts/storage/src/paths/: mod.rs
parts/storage/src/paths/o7/: mod.rs
parts/transport/: Cargo.toml
parts/transport/src/: lib.rs
src/: io.rs  lib.rs  main.rs
src/app/: start.rs
src/auth/: token.rs
src/paths/o8/: mod.rs
src/storage/: graph.rs
system/auth/src/: lib.rs  token.rs
system/core/: Cargo.toml  README.md
system/core/src/: lib.rs
system/core/src/ops/: access_get.rs  group_create.rs  group_drop.rs  storage_put.rs  storage_query.rs
system/core/tests/: integration.rs
system/events/: Cargo.toml
system/runtime/: Cargo.toml
system/runtime/src/: lib.rs
system/server/src/: lib.rs
system/server/src/handlers/: mod.rs  reqres.rs
system/server/tests/: integration.rs
tools/browser/: Cargo.toml
tools/browser/src/: store.rs
tools/cli/: Cargo.toml
tools/gui/: pnpm-lock.yaml
tools/gui/src-tauri/src/: lib.rs  main.rs
tools/ide/: package.json
tools/ide/src/: main.ts
tools/ide/src-tauri/: Cargo.toml  tauri.conf.json
