[package]
name = "ordinarylabs-io"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://ordinarylabs.io"
description = "https://ordinarylabs.io"

repository = "https://github.com/ordinarylabs/ordinary"

[dependencies]
sailfish = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
    ".extensions/*",
    ".structure/*",

    ## only for this project
    "parts/*",
    "tools/cli",
    "tools/gui/src-tauri",
]

## only for this project
[workspace.dependencies]
cbwaw = { path = "./parts/auth", version = "*" }
stewball = { path = "./parts/storage", version = "*" }

[entity]
name = { type = "str" }
liked_posts = { link = "post", on = "liked_by" }

[handler.a.input]
id = { type = "str" }

[query.posts.asdf]

[experiments]

[template.'*'.html]
lang = "en"
[template.'*'.html.head.meta]
charset = "utf-8"

[ordinary]
cache = false

[plugins]
payments = true
