[package]
name = "ordinarylabs-io"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://ordinarylabs.io"
description = "https://ordinarylabs.io"

repository = "https://github.com/ordinarylabs/ordinary"

[dependencies]
sailfish = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
    ".extensions/*",
    ".structure/*",

    ## only for this project
    "parts/*",
    "tools/browser",
    "tools/cli",
    "tools/ide/src-tauri",
]

## only for this project
[workspace.dependencies]
cbwaw = { path = "./parts/auth", version = "*" }
stewball = { path = "./parts/core", version = "*" }
saferlmdb = "0.1.0"
blake2 = "0.10.6"
opaque-ke = { version = "3.0.0", features = ["argon2"] }
serde = { version = "1.0.215", features = ["derive"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
