[package]
name = "vpn"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://github.com/ordinarylabs/ordinary"
repository = "https://github.com/ordinarylabs/ordinary"

description = "build something ordinary."
license = "AGPL-3.0-only"
readme = "README.md"
categories = []