[package]
name = "hostess"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://github.com/ordinarylabs/ordinary"
repository = "https://github.com/ordinarylabs/ordinary"

description = "build something ordinary."
license = "AGPL-3.0-only"
readme = "README.md"
categories = []

[dependencies]
axum = { version = "0.7.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bytes = "1.7.2"
futures = "0.3.31"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
log = "0.4.22"
mio = "1.0.2"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
rayon = "1.10.0"
reqwest = "0.12.9"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing-subscriber = "0.3.18"
stewball = { workspace = true }
uuid = { version = "1.11.0", features = ["serde"] }
serde = "1.0.215"
saferlmdb = "0.0.1"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }

