[package]
name = "isaway"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://github.com/ordinarylabs/ordinary"
repository = "https://github.com/ordinarylabs/ordinary"

description = "build something ordinary."
license = "AGPL-3.0-only"
readme = "README.md"
categories = []

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
bytes = "1.7.2"
log = "0.4.22"
mio = "1.0.2"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }

