[package]
name = "vangough"
version = "0.0.0"
edition = "2021"
authors = ["sean watters <sean@ordinarylabs.io>"]

homepage = "https://github.com/ordinarylabs/ordinary"
repository = "https://github.com/ordinarylabs/ordinary"

description = "build something ordinary."
license = "AGPL-3.0-only"
readme = "README.md"
categories = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.19"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vangough_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


